# GitHub-Profile-Authenticity-Scorer

gpas-starter/: README.md  pyproject.toml  requirements.txt
gpas-starter/examples/: sample_report.json
gpas-starter/gpas/: api.py  cli.py  extract.py  features.py  score.py
gpas-starter/tests/: test_score.py
